Ticker tape backend changes
